add qq version 8.4.1